# metronome

./: .gitmodules  CMakeLists.txt  README.md  datalayout.sc  opgen
source/: main.c  metronome-cli.c  metronome-tui.c  metronome.c  metronome.h
